--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,21 +1,18 @@
 .header {
-  position: absolute;
-  z-index: 1;
+  z-index: 2;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 30px;
-  width: 84.8%;
+  width: 100%;
 
   @media (max-width: $tablet-width-only) {
     margin-top: 40px;
-    width: 88.4%;
   }
 
   @media (max-width: $mobile-width-only) {
     margin-top: 20px;
-    width: 90.6%;
   }
 }
 
