--- a/source/sass/blocks/subscriptions.scss
+++ b/source/sass/blocks/subscriptions.scss
@@ -68,6 +68,7 @@
   &::after {
     position: absolute;
     right: 0;
+    z-index: 1;
 
     @media (min-width: $desktop-width) {
       content: url("../img/weights@1x.png");
@@ -146,7 +147,7 @@
 }
 
 .subscriptions__box {
-  z-index: 0;
+  z-index: 2;
   justify-content: space-between;
   width: 100%;
   margin-top: 22px;
