--- a/source/sass/grid.scss
+++ b/source/sass/grid.scss
@@ -1,17 +1,25 @@
 .container {
-  margin: 0  7.6%;
+  box-sizing: border-box;
+  padding-top: 0;
+  padding-right: 103px;
+  padding-left: 103px;
+  padding-bottom: 0;
+  max-width: 1366px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 0;
 
   @media (max-width: $tablet-width-only) {
-    margin: 0  5.8%;
+    padding: 0  45px;
   }
 
   @media (max-width: $mobile-width-only) {
-    margin: 0 4.7%;
+    padding: 0 15px;
   }
 }
 
 .page-wrapper {
-  max-width: 1366px;
   height: 100%;
   display: flex;
   position: relative;
@@ -19,4 +27,8 @@
   align-items: stretch;
   flex-direction: column;
   margin: 0 auto;
+}
+
+main {
+  margin-top: -56px;
 }
